# silver

./: Cargo.toml  README.md  niko256.mtl  scene.yml
examples/: bubbles.rs  cornell_box.rs  env_map.rs  grass.rs  obj_cube.rs  obj_niko256.rs  scene1.rs  scene2.rs  smooth_torus.rs  xyz.rs  yaml.rs
src/: bbox.rs  bvh.rs  camera.rs  envs.rs  lib.rs  linear_search.rs  main.rs  matrix.rs  object.rs  onb.rs  pdf.rs  primitives.rs  ray.rs  render.rs  rng.rs  sample.rs  scene.rs  util.rs  vec3.rs
src/formats/: mod.rs  obj.rs  yaml.rs
src/materials/: checker.rs  constant_medium.rs  dielectric.rs  diffuse_light.rs  lambertian.rs  material.rs  metal.rs  mod.rs  tex.rs  uv_map.rs  wet_glass.rs
src/objects/: sphere.rs
src/resolvers/: bvh.rs  linear_search.rs  mod.rs  object.rs  transformed.rs
src/shapes/: edge.rs  mod.rs  shape.rs  sphere.rs  triangle.rs  triangle_with_normals.rs
src/yaml/: mod.rs
