[package]
name = "silver"
version = "0.1.0"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
image = "0.24.3"
